--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>DOM Javascript - Entrainement</h1>
     <button id="btn-action">Clicquer ici</button>
-    <p id="message" aria-live="polite"></p>
+    <p id="message" aria-live="polite" tabindex="-1"></p>
     <p id="counter">Nombre de clics : 0</p>
     <script src="script.js"></script>
   </body>
